cloudfabric: support setting up 2 node tcp transport
Fixes: GDB-466

Note this code only supports *exactly* 2 nodes, even though 1 node can do
tcp ok. This is because I don't want to accidentally 'refresh' one node of
a 2 node cluster and not tell it to access the other.

This commit also assumes you want to use tinc.

--- a/tailor/cloudfabric.conf
+++ b/tailor/cloudfabric.conf
@@ -2,10 +2,7 @@
 cluster=1
 node={number}
 
-client-url=tcp://127.0.0.1:5501
-pub-url=epgm://{netname};224.0.0.1:5502
-dbreq-url=tcp://127.0.0.1:5504
-dbrep-url=tcp://127.0.0.1:5505
+{urls}
 
 [DatabaseAdapter]
 bdbEnvironmentPath=/var/lib/cloudfabric
